# bud-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  legacy_models.py  models-inspect.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
api/: celery.py  middleware.py  settings.py  urls.py
api/base/: base_model.py
api/jwt/: __init__.py  verify_token.py
api/utils/: calculate_actual_cycle.py  translate_datetime.py
api/utils/decorators/: filter_queryset.py
okr/: models.py  urls.py  viewset.py
okr/enums/: cycle_choices.py  key_result_check_mark_choices.py  key_result_choices.py  key_result_comment_choices.py  objective_choices.py
okr/management/commands/: dump.py
okr/migrations/: 0001_initial.py  0002_cycle_deleted_at_keyresult_deleted_at_and_more.py  0002_initial.py  0003_initial.py
okr/serializers/: cycle_serializer.py  key_result_serializer.py  key_result_task_serializer.py
okr/viewsets/: key_result_viewset.py
task_manager/: middleware.py  models.py  serializers.py  urls.py  viewset.py
task_manager/enums/: __init__.py  task_priority_choices.py  task_status_choices.py
task_manager/migrations/: 0001_initial.py  0002_initial.py  0002_task_deleted_at_alter_taskhistory_deleted_at.py  0003_alter_taskhistory_options_alter_task_status_and_more.py  0003_alter_taskhistory_options_task_cycle_task_orderindex_and_more.py  0004_alter_taskhistory_task.py  0004_task_cycle_task_orderindex_alter_taskhistory_task.py  0005_task_initial_date.py  0006_alter_task_description.py  0007_taskcomments.py  0008_alter_taskhistory_author.py
task_manager/serializers/: task_comments_serializer.py  task_history_serializer.py  task_serializer.py
task_manager/viewsets/: task_comments_viewset.py  task_viewset.py
team/: models.py
team/migrations/: 0001_initial.py  0002_initial.py  0002_team_deleted_at.py
user/: models.py
user/enums/: user_choices.py  user_settings_choices.py
user/migrations/: 0001_initial.py  0002_user_deleted_at_usersetting_deleted_at.py
user/serializers/: user_serializer.py
