[tool.poetry]
name = "api"
version = "0.1.0"
description = "Bud backend post migration"
authors = ["Kevin <kevin.souza@weme.nu>"]

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
django-rest-framework = "^0.1.0"
celery = "^5.4.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
python-dateutil = "^2.9.0.post0"
uuid6 = "^2024.7.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
